[project]
name = "launchdarkly-server-sdk"
version = "9.15.1"
description = "LaunchDarkly SDK for Python"
authors = [
    {name = "LaunchDarkly", email = "dev@launchdarkly.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "certifi>=2018.4.16",
    "expiringdict>=1.1.4",
    "pyRFC3339>=1.0",
    "semver>=2.10.2",
    "urllib3>=1.26.0,<3",
    "launchdarkly-eventsource>=1.5.0,<2.0.0",
]

[project.urls]
Homepage = "https://docs.launchdarkly.com/sdk/server-side/python"
Repository = "https://github.com/launchdarkly/python-server-sdk"
Documentation = "https://launchdarkly-python-sdk.readthedocs.io/en/latest/"

[project.optional-dependencies]
redis = ["redis>=2.10.5"]
consul = ["python-consul>=1.0.1"]
dynamodb = ["boto3>=1.9.71"]
test-filesource = ["pyyaml>=5.3.1", "watchdog>=3.0.0"]

[dependency-groups]
dev = [
    "mock>=2.0.0",
    "pytest>=8.0.0,<9",
    "redis>=2.10.5,<5.0.0",
    "boto3>=1.9.71,<2.0.0",
    "coverage>=4.4",
    "jsonpickle>1.4.1",
    "pytest-cov>=2.4.0",
    "pytest-mypy==0.10.3",
    "mypy==1.8.0",
    "pycodestyle>=2.12.1,<3",
    "isort>=5.13.2,<6",
]
contract-tests = [
    "Flask<4",
    "requests>=2.31.0",
    "urllib3>=1.26.0,<3",
]
docs = [
    "sphinx>=6,<8",
    "sphinx-rtd-theme>=1.3,<3.0",
    "expiringdict>=1.1.4",
    "pyrfc3339>=1.0",
    "jsonpickle>1.4.1",
    "semver>=2.7.9",
    "urllib3>=1.26.0",
    "jinja2==3.1.3",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
install_types = true
non_interactive = true

[tool.isort]
multi_line_output = 3


[tool.pytest.ini_options]
addopts = ["-ra"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ldclient"]
exclude = ["ldclient/testing"]
